wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: ghcr.io/svartastorken/ubi10-wordpress:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          
          # OBS: Ta bort 'command' helt nu.
          # Bas-imagen har ett smart start-script som drar igång allt rätt.
          
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
